@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.4-Beta2 
+	- DB Update, fixes the playlist create issue with full strict on
+		MySQL 5.x
+	- Corrected mime type for JPG (Thx CoF)
 	- Added Catalog Last Update and Last Add times to API Handshake. 
 	- Fixed Remember Me Cookie so it's actually set
 	- Removed some invalid queries that were not needed, tweaked logic
